<resources>
    <string name="app_name">Catsy</string>
    <string name="registration_title">Create account</string>
    <string name="google_authentication">Continue with Google</string>
    <string name="facebook_authentication">Continue with Facebook</string>
    <string name="apple_authentication">Continue with Apple</string>
    <string name="registration_hint_user_name">Full Name</string>
    <string name="registration_hint_email">Email</string>
    <string name="registration_hint_password">Password</string>
    <string name="registration_hint_phone">Phone</string>
    <string name="verify_number_hint_code">SMS code</string>
    <string name="registration_button_register">Register</string>
    <string name="verify_button_verify">Verify</string>
    <string name="verify_button_resent_code">Resent code</string>
    <string name="verify_button_resent_link">Resent link</string>
    <string name="login_title">Sign in</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_description">Please enter email to reset password</string>
    <string name="forgot_password_button">Reset password</string>
    <string name="forgot_password_success_notific">Password successfully reset!</string>
    <string name="forgot_password_fail_notific">Failed to reset password!</string>
    <string name="verify_phone_title">Verify phone</string>
    <string name="verify_phone_email">Verify email</string>
    <string name="verify_phone_description">Verification code sent to:\n</string>
    <string name="verify_email_description">Verification link sent to:\n</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_forgot_password">Forgot password</string>
    <string name="text_slide_1">Always be on the wave of fun around</string>
    <string name="text_slide_2">Get together with those who share your interests</string>
    <string name="text_slide_3">Have an amazing \n experience!</string>
    <string name="tutorial_button_skip">Skip Tutorial</string>
    <string name="navigation_bar_map">Map</string>
    <string name="navigation_bar_event_list">Events</string>
    <string name="navigation_bar_new_event">Create</string>
    <string name="navigation_bar_chat">Messages</string>
    <string name="navigation_bar_account">Account</string>
    <string name="event_access_public">Public</string>
    <string name="event_access_public_description">Public events are visible for everyone</string>
    <string name="event_access_private">Private</string>
    <string name="event_access_private_description">Private events are visible for invited people only</string>
    <string name="event_access_selective">Selective</string>
    <string name="event_access_selective_description">Selective events are visible for everyone but can be accessed only after host confirmation</string>
    <string name="new_event_primary_page_title">Step 1 \u2022 Primary info</string>
    <string name="new_event_maps_popup_title">Step 2 \u2022 Pick event address</string>
    <string name="new_event_final_page_title">Step 3 \u2022 Additional info</string>
    <string name="new_event_btn_invite_friends">Invite friends</string>
    <string name="new_event_create_btn">Create</string>
    <string name="new_event_back_btn">Back</string>
    <string name="new_event_event_title">Title</string>
    <string name="new_event_event_description">Description</string>
    <string name="new_event_time_start">Start time</string>
    <string name="new_event_time_end">End time</string>
    <string name="new_event_event_theme">Event theme</string>
    <string name="event_theme_dialog_title">Select event themes</string>
    <string name="event_theme_dialog_notification">Please choose no more than 3 themes</string>
    <string name="new_event_event_created_notification">New event successfully created!</string>
    <string name="new_event_event_failed_create_notification">Failed to create new event!</string>
    <string name="new_event_event_success_sent_event_notifications">All event invites successfully sent!</string>
    <string name="new_event_event_failed_sent_notifications">Failed to sent event invites!</string>
    <string name="new_event_fill_mandatory_field_error">Mandatory field</string>
    <string name="new_event_next_btn">Next</string>
    <string name="new_event_final_avatar_hint">Add\n image</string>
    <string name="new_event_maps_popup_error_text">Can\'t identify address. Please use search field</string>
    <string name="new_event_maps_search_bar_placeholder">Search a place</string>
    <string name="new_event_maps_confirm_button">Confirm</string>
    <string name="new_event_event_min_age">Minimum age</string>
    <string name="new_event_event_max_age">Maximum age</string>
    <string name="new_event_event_attendees">Maximum number of people</string>
    <string name="event_detailed_join_button">Join</string>
    <string name="event_detailed_start_time_title">From:</string>
    <string name="event_detailed_end_time_title">To:</string>
    <string name="event_detailed_age_limit_placeholder_less">\u003c\u0020</string>
    <string name="event_detailed_age_limit_placeholder_more">\u003e\u0020</string>
    <string name="event_detailed_age_limit_placeholder_years">\u0020y.o.</string>
    <string name="event_detailed_max_participants_text">Max person:</string>
    <string name="event_detailed_age_limit_title">Age limit:</string>
    <string name="event_detailed_max_age_text">Max age:</string>
    <string name="event_detailed_joined_button_leave_state">Leave</string>
    <string name="event_detailed_join_success">You joined event:\u0020</string>
    <string name="event_detailed_join_fail">Failed to join event:\u0020</string>
    <string name="event_detailed_leave_success">You left event:\u0020</string>
    <string name="event_detailed_leave_fail">Failed to leave event:\u0020</string>
    <string name="event_detailed_no_free_slot">Maximum limit of members reached!</string>
    <string name="event_liked_success">You liked event:\u0020</string>
    <string name="event_liked_fail">Failed to like event:\u0020</string>
    <string name="user_blocked_success">User added to block list:\u0020</string>
    <string name="user_blocked_fail">Fail to add user to block list:\u0020</string>
    <string name="user_friend_request_success">Friend request sent to user:\u0020</string>
    <string name="user_friend_request_fail">Failed to send friend request:\u0020</string>
    <string name="profile_remove_friend_success">User is removed from friend list:\u0020</string>
    <string name="profile_remove_friend_fail">Failed to remove user from friend list:\u0020</string>
    <string name="profile_id_placeholder">ID:\u0020</string>
    <string name="profile_tab_title_main">Personal Info</string>
    <string name="profile_tab_title_events">Events</string>
    <string name="profile_tab_title_friends">Friends</string>
    <string name="profile_button_logout">Logout</string>
    <string name="profile_info_title_social_networks">Social networks</string>
    <string name="profile_notifications_title">Notifications</string>
    <string name="profile_no_new_notifications_label">No new notifications</string>
    <string name="profile_no_friends_label">No friends added yet</string>
    <string name="notifications_tab_title_all">All</string>
    <string name="notifications_tab_title_events">Events</string>
    <string name="notifications_tab_title_friends">Friends</string>
    <string name="popup_user_add">Add to friends</string>
    <string name="popup_user_block">Block user</string>
    <string name="popup_user_remove_friend">Remove friend</string>
    <string name="notifications_accept_btn">Accept</string>
    <string name="notifications_decline_btn">Decline</string>
    <string name="notification_friend_invite_title">\u0020sent you friend request</string>
    <string name="notification_event_invite_title">\u0020sent you invitation to\u0020</string>
    <string name="friend_invite_accept_success">\u0020added to friend list!</string>
    <string name="friend_invite_accept_fail">\u0020error adding user to friend list!</string>
    <string name="profile_status_default">Hello, My Name Is… &#128570;</string>
    <string name="event_theme_sport">Sport</string>
    <string name="event_theme_music">Music</string>
    <string name="event_theme_art">Art</string>
    <string name="event_theme_quest">Quest</string>
    <string name="event_theme_hookah">Hookah</string>
    <string name="event_theme_shopping">Shopping</string>
    <string name="event_theme_film">Film</string>
    <string name="event_theme_birthday">Birthday</string>
    <string name="event_theme_walking">Walking</string>
    <string name="event_theme_job">Job</string>
    <string name="event_theme_jogging">Jogging</string>
    <string name="event_theme_workout">Workout</string>
    <string name="event_theme_tattoo">Tattoo</string>
    <string name="event_theme_health">Health</string>
    <string name="event_theme_pets">Pets</string>
    <string name="event_theme_fishing">Fishing</string>
    <string name="event_theme_cars">Cars</string>
    <string name="event_theme_travel">Travel</string>
    <string name="event_theme_excursion">Excursion</string>
    <string name="event_theme_games">Games</string>
    <string name="event_theme_alcohol">Alcohol</string>
    <string name="event_theme_rocknroll">Rock-n-Roll</string>
    <string name="event_theme_exhibition">Exhibition</string>
    <string name="event_theme_fair">Fair</string>
    <string name="event_theme_comedy">Comedy</string>
    <string name="event_theme_party">Party</string>
    <string name="event_theme_romance">Romance</string>
    <string name="event_theme_kids">Kids</string>
    <string name="event_theme_fashion">Fashion</string>
    <string name="event_theme_photo">Photo</string>
    <string name="event_theme_technology">Technology</string>
    <string name="event_theme_anime">Anime</string>
    <string name="event_theme_religion">Religion</string>
    <string name="event_theme_dance">Dance</string>
    <string name="event_theme_lgbtq">LGBTQ+</string>
    <string name="event_theme_study">Study</string>
    <string name="event_theme_books">Books</string>
</resources>