<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationBarMap"
        android:icon="@drawable/ic_map"
        android:title="@string/navigation_bar_map"/>

    <item
        android:id="@+id/navigationBarEventList"
        android:icon="@drawable/book"
        android:title="@string/navigation_bar_event_list"/>

    <item
        android:id="@+id/navigationBarNewEvent"
        android:icon="@drawable/ic_add"
        android:title="@string/navigation_bar_new_event" />

    <item
        android:id="@+id/navigationBarChat"
        android:icon="@drawable/ic_message"
        android:title="@string/navigation_bar_chat" />

    <item
        android:id="@+id/navigationBarAccount"
        android:icon="@drawable/ic_user"
        android:title="@string/navigation_bar_account" />
</menu>