<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="vertical"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/im_background_new_event">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:text="@string/new_event_primary_page_title"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/default_page_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/mbtg_access_type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_event_title"
            app:layout_constraintVertical_bias="0"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_public"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/audiowide"
                android:padding="5dp"
                android:text="@string/event_access_public"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/default_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_private"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/audiowide"
                android:padding="5dp"
                android:text="@string/event_access_private"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/default_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_selective"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/audiowide"
                android:padding="5dp"
                android:text="@string/event_access_selective"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/default_text_size" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_access_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_side_margin"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:background="@drawable/ui_rounded_corners_background"
            android:drawableStart="@drawable/ic_caticorn_public_scale"
            android:ems="10"
            android:fontFamily="@font/audiowide"
            android:gravity="center_vertical|center"
            android:inputType="textVisiblePassword|textNoSuggestions|textMultiLine"
            android:longClickable="false"
            android:maxEms="15"
            android:padding="5dp"
            android:singleLine="false"
            android:text="@string/event_access_selective_description"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/default_page_descr_minor_text_size"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="1sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mbtg_access_type"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_event_title"
            style="@style/NewEventTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_event_title"
                style="@style/NewEventTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_event_event_title"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_start_time"
            style="@style/NewEventTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/til_end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_access_description"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_start_time"
                style="@style/NewEventTextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/new_event_time_start"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_end_time"
            style="@style/NewEventTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_side_margin"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/til_start_time"
            app:layout_constraintTop_toBottomOf="@id/tv_access_description"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_end_time"
                style="@style/NewEventTextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/new_event_time_end"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_event_themes"
            style="@style/NewEventTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_new_event_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_end_time"
            app:layout_constraintVertical_bias="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_event_themes"
                style="@style/NewEventTextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:focusable="false"
                android:hint="@string/new_event_event_theme"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            style="@style/DefaultButton"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/new_event_next_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_new_event_primary"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_new_event_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
